# Python-CodeArtifact-Publisher

./: .gitignore  README.md  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: main.yaml  publish.yaml  test.yaml
infra/: main.tf  outputs.tf  variables.tf
jibbspackage/: __init__.py  simple.py
simplepackage/: __init__.py  simple.py
tests/: test_simple.py
