[project]
name = "jibbspackage"
dynamic = ["version"]
description = "A simple example package for publishing to AWS CodeArtifact."
keywords = ["AWS", "CodeArtifact", "Package Publishing"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

authors = [
    { name = "Abraham Ajibade", email = "abraham0ajibade@gmail.com" }
]
maintainers = [
    { name = "Abraham Ajibade", email = "abraham0ajibade@gmail.com" }
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
]

[project.scripts]
jibbspackage-hello = "jibbspackage.simple:hello"

[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["jibbspackage"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"